// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConcurrentLeaves renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Other leave, benefits, and income"
>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": true,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint={
      <React.Fragment>
        <LeaveDatesAlert
          endDate="2021-06-01"
          startDate="2021-01-01"
        />
        <Heading
          className="margin-top-4"
          level="2"
        >
          What kinds of accrued paid leave to report
        </Heading>
        <Trans
          i18nKey="pages.claimsConcurrentLeaves.hintWhatKindBody"
        />
        <Heading
          level="2"
        >
          When you need to report it
        </Heading>
        <Trans
          components={
            Object {
              "li": <li />,
              "ul": <ul
                className="usa-list"
              />,
            }
          }
          i18nKey="pages.claimsConcurrentLeaves.hintWhenToReportBody"
        />
        <Details
          label="What are the qualifying reasons?"
        >
          <Trans
            components={
              Object {
                "li": <li />,
                "ul": <ul
                  className="usa-list"
                />,
              }
            }
            i18nKey="pages.claimsConcurrentLeaves.hintWhenToReportDetailsBody"
          />
        </Details>
      </React.Fragment>
    }
    label="Will you use any employer-sponsored accrued paid leave during your paid leave from PFML?"
    name="has_concurrent_leave"
    onChange={[Function]}
    type="radio"
    value={true}
  />
</QuestionPage>
`;

exports[`ConcurrentLeaves renders the page 2`] = `
Array [
  <LeaveDatesAlert
    endDate="2021-06-01"
    startDate="2021-01-01"
  >
    <Alert
      className="margin-top-2 margin-bottom-4"
      heading="Your leave dates for paid leave"
      headingSize="2"
      neutral={true}
      noIcon={true}
      state="info"
    >
      <div
        className="usa-alert usa-alert--info usa-alert--no-icon c-alert--neutral margin-top-2 margin-bottom-4"
        tabIndex="-1"
      >
        <div
          className="usa-alert__body"
          role="region"
        >
          <Heading
            className="usa-alert__heading"
            level="2"
            size="2"
          >
            <h2
              className="usa-alert__heading font-heading-md text-bold"
            >
              Your leave dates for paid leave
            </h2>
          </Heading>
          <div
            className="usa-alert__text"
          >
            1/1/2021 – 6/1/2021
          </div>
        </div>
      </div>
    </Alert>
  </LeaveDatesAlert>,
  <Heading
    className="margin-top-4"
    level="2"
  >
    <h2
      className="margin-top-4 font-heading-md text-bold"
    >
      What kinds of accrued paid leave to report
    </h2>
  </Heading>,
  <Trans
    i18nKey="pages.claimsConcurrentLeaves.hintWhatKindBody"
  >
    <p
      key="p-0"
    >
      This includes any paid vacation time, sick time, and personal time. It should be reported if it’s taken during your leave period, whether it’s during the 7-day waiting period or after. Reminder: you can use accrued paid leave during the 7-day waiting period with no impact to your PFML benefit.
    </p>
  </Trans>,
  <Heading
    level="2"
  >
    <h2
      className="font-heading-md text-bold"
    >
      When you need to report it
    </h2>
  </Heading>,
  <Trans
    components={
      Object {
        "li": <li />,
        "ul": <ul
          className="usa-list"
        />,
      }
    }
    i18nKey="pages.claimsConcurrentLeaves.hintWhenToReportBody"
  >
    <p
      key="p-0"
    >
      If your PFML leave includes taking time off work completely for a period of time (continuous leave), you need to report any accrued paid leave you plan to take during that continuous leave. Select Yes to report this leave.
    </p>
    <p
      key="p-1"
    >
      If your PFML leave includes working fewer hours than normal (a reduced leave schedule) or taking time off work in uneven or unpredictable blocks of time (intermittent leave), you need to report leave if ONE of the following two statements is true:
    </p>
    <ul
      className="usa-list"
      key="2"
    >
      <li
        key="0"
      >
        You are planning to use this accrued paid leave on days when you are also taking PFML leave.
      </li>
      <li
        key="1"
      >
        You are planning to use this accrued paid leave for a PFML qualifying reason, even if it’s not the same reason you are applying for now.
      </li>
    </ul>
  </Trans>,
  <Details
    label="What are the qualifying reasons?"
  >
    <details
      className="c-details"
    >
      <summary
        className="margin-bottom-2 text-primary text-underline font-ui-xs"
      >
        What are the qualifying reasons?
      </summary>
      <div
        className="margin-bottom-2"
      >
        <Trans
          components={
            Object {
              "li": <li />,
              "ul": <ul
                className="usa-list"
              />,
            }
          }
          i18nKey="pages.claimsConcurrentLeaves.hintWhenToReportDetailsBody"
        >
          <ul
            className="usa-list"
            key="0"
          >
            <li
              key="0"
            >
              You had a serious health condition, including illness, injury, or pregnancy.
            </li>
            <li
              key="1"
            >
              If you were sick, you were out of work for at least 3 days and needed continuing care from your health care provider or needed inpatient care.
            </li>
            <li
              key="2"
            >
              You bonded with your child after birth or placement.
            </li>
            <li
              key="3"
            >
              You needed to manage family affairs while a family member is on active duty in the armed forces.
            </li>
            <li
              key="4"
            >
              You needed to care for a family member who serves in the armed forces.
            </li>
            <li
              key="5"
            >
              You needed to care for a family member with a serious health condition.
            </li>
          </ul>
        </Trans>
      </div>
    </details>
  </Details>,
]
`;

exports[`when the claim does not contain concurrent leave data renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Other leave, benefits, and income"
>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint={
      <React.Fragment>
        <LeaveDatesAlert
          endDate="2021-06-01"
          startDate="2021-01-01"
        />
        <Heading
          className="margin-top-4"
          level="2"
        >
          What kinds of accrued paid leave to report
        </Heading>
        <Trans
          i18nKey="pages.claimsConcurrentLeaves.hintWhatKindBody"
        />
        <Heading
          level="2"
        >
          When you need to report it
        </Heading>
        <Trans
          components={
            Object {
              "li": <li />,
              "ul": <ul
                className="usa-list"
              />,
            }
          }
          i18nKey="pages.claimsConcurrentLeaves.hintWhenToReportBody"
        />
        <Details
          label="What are the qualifying reasons?"
        >
          <Trans
            components={
              Object {
                "li": <li />,
                "ul": <ul
                  className="usa-list"
                />,
              }
            }
            i18nKey="pages.claimsConcurrentLeaves.hintWhenToReportDetailsBody"
          />
        </Details>
      </React.Fragment>
    }
    label="Will you use any employer-sponsored accrued paid leave during your paid leave from PFML?"
    name="has_concurrent_leave"
    onChange={[Function]}
    type="radio"
    value=""
  />
</QuestionPage>
`;
